crates/toml/tests/snapshots/invalid/ext/table/append-with-dotted-keys-8.stderr
TOML parse error at line 4, column 2
  |
4 | [_.s]
  |  ^^^
duplicate key
